<resources>
    <string name="app_name">Splash Screen</string>
    <string name="jelajahi_sekarang">Click here to explore!</string>
    <string name="kenalan_dulu_yuk_sama_kami">Get to Know Us!</string>
    <string name="hi">hi</string>
    <string name="selamat_datang">Welcome Back</string>
    <string name="tentang_kami">About Us</string>
    <string name="panduan">Help</string>
    <string name="mulai_sekarang">Process Data</string>
    <string name="historystatistik">History and Statistics</string>
    <string name="statistik">Statistics</string>
    <string name="history">History</string>
    <string name="panduan_penggunaan">User Guide</string>
    <string name="informasi">Information</string>
    <string name="read_this_out">About Us!</string>
    <string name="p2">If the machine recognizes the object as an object called a tree, then the machine will continue the data retrieval process. Then, from the tree image, the data taken is the height and diameter of the tree. The data will then be processed and get the results of the level of carbon content from the calculations implemented in the application.</string>
    <string name="p1">CarbonMath is an AI engine that involves computer vision so that it can calculate carbon stocks in forests based on input images received from cameras attached to the location. The process that involves AI is the image recognition process.</string>
    <string name="apa_itu_ai">What is AI?</string>
    <string name="read_more1">Read more <a href="https://www.techtarget.com/searchenterpriseai/definition/AI-Artificial-Intelligence">Here</a></string>
    <string name="read_more2">Read more <a href="https://www.simplilearn.com/computer-vision-article">Here</a></string>
    <string name="visi_komputer">What is Computer Vision?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_input_the_following_data">Please input the following data:</string>
    <string name="the_height_of_observer_phone_from_the_floor">The height of observer/phone from the floor (Y-axis)</string>
    <string name="x_distance_from_the_observer_to_the_tree">Distance from the tree to the observer/phone (X-axis)</string>
    <string name="result_button">Result</string>
    <string name="title_activity_panduan_dari_kalku">panduan_dari_kalku</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="choose_the_tree_type">Choose the tree type:</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="my_account">My Account</string>
    <string name="logout">Logout</string>

</resources>