<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        android:onClick="openactivity_history"/>

    <group android:checkableBehavior="single">
        <item android:title="Profile">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_login"
                        android:icon="@drawable/baseline_login_24"
                        android:title="@string/login"/>
                    <item
                        android:id="@+id/nav_profile"
                        android:icon="@drawable/baseline_account_circle_24"
                        android:title="@string/my_account"/>
                    <item
                        android:id="@+id/nav_logout"
                        android:icon="@drawable/baseline_logout_24"
                        android:title="@string/logout"/>
                </group>
            </menu>
        </item>
        <item android:title="About Us">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_info"
                        android:icon="@drawable/baseline_information"
                        android:title="@string/informasi"
                        android:onClick="openactivity_information_page"/>
                    <item
                        android:id="@+id/help"
                        android:icon="@drawable/help"
                        android:onClick="openactivity_panduandari_menu"
                        android:title="@string/panduan"/>
                    <item
                        android:id="@+id/History"
                        android:title="@string/history"
                        android:icon="@drawable/baseline_history_24"
                        android:onClick="openactivity_history"/>
                </group>
            </menu>
        </item>
    </group>
    <Button>

    </Button>
</menu>